Fix CommitUnknwonUserDesc address breaking view on smaller devices

--- a/app/components/commitfunds/CommitUnknownUserDesc.scss
+++ b/app/components/commitfunds/CommitUnknownUserDesc.scss
@@ -16,6 +16,9 @@ $spacing-from-container: 22px;
 
   p {
     margin-bottom: 12px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .verify-link {
